add update salary employee

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # Logging
 logging.level.root = error
-logging.level.com.oppenclassrooms = info
+logging.level.com.exemple = info
 logging.level.org.springframework.boot.autoconfigure.h2 = INFO
 logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
@@ -12,3 +12,6 @@ logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:employeedb
 
+#Jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
