big update(data) employeeCat...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,23 @@
 
 
 
-# Logging
+#Logging
 logging.level.root = error
 logging.level.com.exemple = info
 logging.level.org.springframework.boot.autoconfigure.h2 = INFO
 logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
-# H2
+#H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:employeedb
 
 #Jpa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#SQL Data
+spring.sql.init.mode=always 
+#toujours initialiser la base de données
+spring.jpa.defer-datasource-initialization=true
+
+
